src/pages/common/components/Avatar/Avatar.less
:local .component {
    position: relative;
    background: var(--main-secondary);

    &.hasImage {
        background: transparent;
    }

    &.hasImage .initials {
        display: none;
    }

    &.round,
    &.round .gravatar {
        border-radius: 50% !important;
    }

    &.square,
    &.square .gravatar {
        border-radius: 2px !important;
    }

    .gravatar,
    .initials {
        width: 100%;
        height: 100%;
    }

    .initials {
        display: flex;
        justify-content: center;

        color: var(--neutral-grey-0);
        font-size: 19px;
        font-weight: 600;
        text-align: center;
        text-transform: uppercase;
    }

    .gravatar {
        text-align: center;
    }

    .badge {
        position: absolute;
        z-index: 2;
        width: 14px;
        height: 14px;
        border-radius: 50%;
        border: solid 2px var(--neutral-grey-1);
    }

    &.square .badge {
        bottom: -6px;
        right: -7px;
    }

    &.round .badge {
        bottom: 0px;
        right: 0px;
    }
}

